# technion-sound-video-vlc

./: README.md  information.txt  readme.txt
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.core/: language.settings.xml  projecttttt.language.settings.xml  vlc2.1447586170765.pdom  vlcProject.language.settings.xml
eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
eclipse-workspace/.metadata/.plugins/org.eclipse.core.resources/: .snap
eclipse-workspace/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
eclipse-workspace/.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
eclipse-workspace/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workbench.xml  workingsets.xml
eclipse-workspace/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
eclipse-workspace/vlcProject/: .cproject  .project
eclipse-workspace/vlcProject/Debug/: makefile  sources.mk
eclipse-workspace/vlcProject/Debug/vlc2/compat/: subdir.mk
vlc2/: .cproject  .project
vlc2/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
vlc2/contrib/native/aribb25/: Makefile.am  configure.ac
vlc2/contrib/native/aribb25/src/: arib_std_b25.h  aribb25.pc.in  aribb25api.h  b_cas_card.h  multi2.h  ts_section_parser.h
vlc2/po/: bn.po  gu.po  mn.po  my.po  nb.po  ne.po  or.po
(+286 files in other folders)
